# Transposition

./: README.md  badBigramms  input_text.py  main.py  pyproject.toml  result.txt  transposition_decrypt.py  transposition_encrypt.py  transposition_hack.py
badbigrame/: badbigram.py  godFather.txt  godFatherNew.txt
