[tool.poetry]
name = "transposition"
version = "0.1.0"
description = ""
authors = ["Baykanurov <vov_ef@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
profilehooks = "^1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
